Jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ce
  labels:
    run: jenkins-ce
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  - name: jnlp-agents
    port: 50000
    protocol: TCP
  selector:
    run: jenkins-ce
