Jenkins/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.danmanners.io
    kubernetes.io/ingress.class: traefik
  labels:
    run: jenkins-ce
  name: jenkins-ce-ingress
spec:
  rules:
    - host: jenkins.danmanners.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: jenkins-ce
              servicePort: 8080
